# markets

./: README.md  markets.doap  meson.build
data/: biz.zaxo.Markets.appdata.xml.in
data/ui/: Application.css  ChartHeaderBar.ui  ChartView.ui  MainHeaderBar.ui  MainWindow.ui  NewSymbolDialog.ui  NoSymbolsView.ui  PreferencesWindow.ui  SelectionHeaderBar.ui  SymbolRow.ui  SymbolsView.ui  ui.gresource.xml
po/: cs.po
src/: Application.vala  ChartData.vala  ChartHeaderBar.vala  ChartView.vala  MainHeaderBar.vala  MainWindow.vala  NewSymbolDialog.vala  NoSymbolsView.vala  PreferencesWindow.vala  RestClient.vala  SelectionHeaderBar.vala  Service.vala  State.vala  Symbol.vala  SymbolRow.vala  SymbolsView.vala  meson.build
